<resources>
    <string name="app_name">practice_basicActivity</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="third_fragment_label">Third Fragment</string>

    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="login">Login</string>
    <string name="home">Home Page</string>
    <string name="calendar">Calendar</string>
    <string name="health">Health/Movement</string>
    <string name="grades">Grades</string>
    <string name="timer">Timer/Alarm</string>
    <string name="planner">Planner/Timeline</string>
    <string name="todo">ToDo List</string>

    <string name="timer_start">Start</string>
    <string name="timer_pause">Pause</string>
    <string name="timer_reset">Reset</string>
    <string name="timer_content">00:00</string>

    <string name="health_water">Put the units??</string>
    <string-array name="health_units">
            <item>Seconds</item>
            <item>Minutes</item>
            <item>Hours</item>
            <item>Count</item>
            <item>Miles</item>
            <item>Ounces</item>
    </string-array>
</resources>
