<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Calendar">

    <EditText
        android:id="@+id/minInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="Time"
        android:imeOptions="actionDone"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/timer_start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.322"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timer" />

    <EditText
        android:id="@+id/secInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="Time"
        android:imeOptions="actionDone"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/timer_pause"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timer" />

    <Button
        android:id="@+id/timeEnter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Enter"
        app:layout_constraintBottom_toTopOf="@+id/timer_reset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.808"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timer" />

    <TextView
        android:id="@+id/textview_second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="77dp"
        android:layout_marginBottom="46dp"
        android:text="@string/timer"
        app:layout_constraintBottom_toTopOf="@+id/timer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/timer_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_second"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/timer_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/timer_start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.188"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_second"
        app:layout_constraintVertical_bias="0.277" />

    <Button
        android:id="@+id/timer_pause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/timer_pause"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/timer_reset"
        app:layout_constraintStart_toStartOf="@+id/timer_start"
        app:layout_constraintTop_toBottomOf="@id/textview_second"
        app:layout_constraintVertical_bias="0.277" />

    <Button
        android:id="@+id/timer_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/timer_reset"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.808"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_second"
        app:layout_constraintVertical_bias="0.277" />

    <Button
        android:id="@+id/button_second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_second" />
</androidx.constraintlayout.widget.ConstraintLayout>