<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Homepage"
    tools:ignore="MissingClass">

    <TextView
        android:id="@+id/textview_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/home"
        android:textSize="20dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="260dp"
        android:layout_height="355dp"
        android:layout_marginTop="100dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:background="@color/white"
            android:padding="10dp">

            <Button
                android:id="@+id/button_toCalendar"
                android:layout_width="220dp"
                android:layout_height="50dp"
                android:text="@string/calendar" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:background="@color/white"
            android:padding="10dp">

            <Button
                android:id="@+id/button_toHealth"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/health" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:background="@color/white"
            android:padding="10dp">

            <Button
                android:id="@+id/button_toGrades"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/grades" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:background="@color/white"
            android:padding="10dp">

            <Button
                android:id="@+id/button_toTimer"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/timer" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:background="@color/white"
            android:padding="10dp">

            <Button
                android:id="@+id/button_toTodo"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/todo" />
        </TableRow>
    </TableLayout>


    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textSize="20dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.801" />

    <android.widget.TextClock
        android:id="@+id/digitalClock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:format12Hour="@null"
        android:format24Hour="dd MMM yyyy   k:mm:ss"
        android:textStyle="bold"
        android:textSize="20dp"
        android:timeZone="GMT-0400"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.853" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Welcome"
        android:textSize="20dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.719" />


    <!-- <Button
            android:id="@+id/button_toCalendar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="556dp"
            android:text="@string/calendar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/button_toHealth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/health"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textview_first"
            app:layout_constraintVertical_bias="0.227" />

        <Button
            android:id="@+id/button_toGrades"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/grades"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textview_first"
            app:layout_constraintVertical_bias="0.359" />

        <Button
            android:id="@+id/button_toTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timer"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textview_first"
            app:layout_constraintVertical_bias="0.484" />

        <Button
            android:id="@+id/button_toPlanner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/planner"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textview_first"
            app:layout_constraintVertical_bias="0.605" />

        <Button
            android:id="@+id/button_toTodo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/todo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textview_first"
            app:layout_constraintVertical_bias="0.727" /> -->

</androidx.constraintlayout.widget.ConstraintLayout>